2011-12-04  Filip Pizlo  <fpizlo@apple.com>

        DFG should optimize strict equality
        https://bugs.webkit.org/show_bug.cgi?id=73764

        Reviewed by Oliver Hunt.
        
        1% speed-up on V8.

        * dfg/DFGSpeculativeJIT.cpp:
        (JSC::DFG::SpeculativeJIT::compare):
        (JSC::DFG::SpeculativeJIT::compileStrictEqForConstant):
        (JSC::DFG::SpeculativeJIT::compileStrictEq):
        * dfg/DFGSpeculativeJIT.h:
        * dfg/DFGSpeculativeJIT32_64.cpp:
        (JSC::DFG::SpeculativeJIT::compileIntegerCompare):
        (JSC::DFG::SpeculativeJIT::compileDoubleCompare):
        (JSC::DFG::SpeculativeJIT::compile):
        * dfg/DFGSpeculativeJIT64.cpp:
        (JSC::DFG::SpeculativeJIT::compileIntegerCompare):
        (JSC::DFG::SpeculativeJIT::compileDoubleCompare):
        (JSC::DFG::SpeculativeJIT::compile):

2011-12-03  Darin Adler  <darin@apple.com>

        Use HashMap<OwnPtr> for ScriptSampleRecordMap
        https://bugs.webkit.org/show_bug.cgi?id=73758

        Reviewed by Andreas Kling.

        * bytecode/SamplingTool.cpp:
        (JSC::SamplingTool::notifyOfScope): Added adoptPtr.
        (JSC::SamplingTool::dump): Added get.
        * bytecode/SamplingTool.h: Changed the value type of ScriptSampleRecordMap to be OwnPtr.

2011-12-03  Darin Adler  <darin@apple.com>

        Use HashMap<OwnPtr> for the opaqueJSClassData map
        https://bugs.webkit.org/show_bug.cgi?id=73759

        Reviewed by Andreas Kling.

        * API/JSClassRef.cpp:
        (OpaqueJSClass::contextData): Update types.
        * runtime/JSGlobalData.cpp:
        (JSC::JSGlobalData::~JSGlobalData): Add an explicit clear of opaqueJSClassData to keep the
        timing the same. If we didn't care about the order of operations, we could remove this, too.
        * runtime/JSGlobalData.h: Use OwnPtr instead of raw pointer for the mapped type in the
        opaqueJSClassData map.

2011-12-03  Darin Adler  <darin@apple.com>
